# gluebox

./: .coveragerc  .gitignore  .gitreview  HACKING.rst  README.rst  puppet-openstack-release-list.txt  requirements.txt  setup.cfg
doc/source/: conf.py  index.rst  installation.rst  usage.rst
gluebox/: __init__.py  base.py  exceptions.py  git.py  release.py  shell.py  version.py
gluebox/tests/: test_gluebox.py
gluebox/tests/utils/: test_git.py  test_metadata.py  test_reno.py  test_version.py
gluebox/utils/: git.py  metadata.py  reno.py  version.py
releasenotes/source/: conf.py  index.rst
