[metadata]
name = gluebox
summary = puppet openstack release tools
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    gluebox

[entry_points]
console_scripts =
    gluebox = gluebox.shell:main

gluebox.cli =
    majorbump = gluebox.version:MajorBump
    minorbump = gluebox.version:MinorBump
    devbump = gluebox.version:DevBump
    checkout = gluebox.git:Checkout
    commit = gluebox.git:Commit
    cleanup = gluebox.git:Cleanup
    pushreview = gluebox.git:PushReview

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = gluebox/locale
domain = gluebox

[update_catalog]
domain = gluebox
output_dir = gluebox/locale
input_file = gluebox/locale/gluebox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = gluebox/locale/gluebox.pot
